# custom-label

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mylabel.h  mylabelplugin.cpp
calib-plugin/: CMakeLists.txt  CheckTreeView.cpp  CheckTreeView.h  CheckTreeViewPlugin.cpp  CheckTreeViewPlugin.h
calib-plugin/include/: CheckTreeView.h
calib-plugin/plugin/: CheckTreeViewPlugin.cpp
calib-plugin/src/: CheckTreeView.cpp
cmake/: calib_pluginConfig.cmake.in
demo-label/: CMakeLists.txt  mylabel.cpp  mylabel.h  mylabel.json  mylabelplugin.cpp  mylabelplugin.h
test/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
